updated css removinf overflow from body should fix some scrolling issues

--- a/app/css/main.styl
+++ b/app/css/main.styl
@@ -913,15 +913,7 @@ section.web-section.row {
     }
 }
 
-@media only screen and (min-width : 0px) and (max-width : 600px) {
 
- html,
-  body{
-    width:100%;
-    overflow-x:hidden;
-  }
-    
-}
   
 
 /*
@@ -2445,10 +2437,5 @@ only screen and (-o-min-device-pixel-ratio: 3/2),
 only screen and (min--moz-device-pixel-ratio: 1.5),
 only screen and (min-device-pixel-ratio: 1.5){
 
-  html,
-  body{
-    width:100%;
-    overflow-x:hidden;
-  }
-
+  
 }
